--- a/war.css
+++ b/war.css
@@ -1,5 +1,16 @@
+body {
+
+    font-family: 'poppins', sans-serif;
+}
+
 .navbar-brand {
     font-family: 'Nunito', sans-serif;
+}
+
+.container {
+    padding: 0.2em;
+
+
 }
 
 .nav-link {
@@ -7,9 +18,6 @@
     font-size: 14px;
 }
 
-body {
-    font-family: 'poppins', sans-serif;
-}
 
 .main-header {
     font-size: 40px;
@@ -19,12 +27,12 @@ body {
 .text-content {
     letter-spacing: 0.4px;
     color: gray;
+    text-align: right;
 }
-
 
 .gerak:hover {
     text-decoration: none;
-    border-bottom: 2px solid #dc3545;
+    border-bottom: 0.1em solid #dc3545;
     transition: 0.5s ease;
 }
 
@@ -35,4 +43,23 @@ body {
 .main-header {
     font-size: 40px;
     font-weight: bold;
+    text-align: right;
+}
+
+.deaLogo {
+    object-fit: cover;
+    width: 50%;
+    padding-left: 1em;
+}
+
+.card-image {
+    position: relative;
+    height: 150px;
+    width: 150px;
+}
+
+.card-image .card-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
