--- a/war.css
+++ b/war.css
@@ -7,10 +7,9 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
+
 .container {
     padding: 0.2em;
-
-
 }
 
 .nav-link {
@@ -30,10 +29,15 @@ body {
     text-align: right;
 }
 
-.gerak:hover {
+.gerak {
     text-decoration: none;
-    border-bottom: 0.1em solid #dc3545;
+    text-decoration: none;
+    cursor: pointer;
     transition: 0.5s ease;
+}
+
+.gerak:hover {
+    border-bottom: 0.1em solid #dc3545;
 }
 
 .section-header {
@@ -46,20 +50,107 @@ body {
     text-align: right;
 }
 
-.deaLogo {
+.warungLogo {
     object-fit: cover;
     width: 50%;
     padding-left: 1em;
 }
 
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+
+.sliding-card {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slide-container {
+    max-width: 1120px;
+    height: 100;
+    width: 100%;
+    background-color: #dc3545;
+    padding: 30px 0;
+    margin-bottom: 35px;
+    border-radius: 12px;
+}
+
+.slide-content {
+    margin: 0 40px;
+}
+
+.cards {
+    width: 320px;
+    background-color: white;
+    border-radius: 12px;
+}
+
+
+
+.image-content,
+.card-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px 14px;
+}
+
+.image-content {
+    row-gap: 5px;
+}
+
+.overlay {
+    position: absolute;
+    height: 100%;
+}
+
 .card-image {
     position: relative;
-    height: 150px;
-    width: 150px;
+    border-radius: 14px;
+    background-color: #efefef;
+    background: #fff;
+
+
+
 }
 
 .card-image .card-img {
+
     height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 14px;
+}
+
+.nameContent {
+    font-size: 18px;
+    font-weight: 500;
+
+}
+
+.description {
+    font-size: 14px;
+    color: gray;
+    text-align: center;
+}
+
+.button {
+    color: white;
+    background-color: #dc3545;
+    font-size: 16px;
+    border-style: hidden;
+    border-radius: 5px;
+    padding: 3px 8px 5px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button:hover {
+    background-color: #f05d6b;
+    font-size: calc(12% + 16px);
 }
