--- a/port.css
+++ b/port.css
@@ -1,47 +1,47 @@
-.navbar-brand{
+.navbar-brand {
     font-family: 'Nunito', sans-serif;
 }
 
-.nav-link{
+.nav-link {
     font-weight: 500;
     font-size: 14px;
 }
 
-body{
+body {
     font-family: 'poppins', sans-serif;
 }
 
-.main-header{
+.main-header {
     font-size: 40px;
     font-weight: bold;
 }
 
-.text-content{
+.text-content {
     letter-spacing: 0.4px;
     color: gray;
 }
 
-.self-portrait{
+.self-portrait {
     object-fit: cover;
     width: 100%;
     border-radius: 16px;
 }
 
-.gerak:hover{
+.gerak:hover {
     text-decoration: none;
     border-bottom: 2px solid #dc3545;
-    transition: 0.5s ease;
+    transition: all 0.5s ease;
 }
 
-.section-header{
+.section-header {
     font-weight: bold;
 }
 
-.card{
+.card {
     border: none;
 }
 
-.image{
+.image {
     display: block;
     width: 100%;
 }
