--- a/course.css
+++ b/course.css
@@ -1,7 +1,3 @@
-:root {
-    --merah: #dc3545;
-}
-
 body {
     font-family: 'poppins', sans-serif;
 }
@@ -31,4 +27,20 @@ body {
 
 .mb-5 {
     padding: 2px 10px;
+}
+
+.roster{
+    font-family: 'Nunito', sans-serif;
+}
+
+.img{
+    height: 300px;
+}
+
+.carousel-item{
+    height: 60vh;
+}
+
+.bulet{
+    border-radius: 20px;
 }
